--- a/index.html
+++ b/index.html
@@ -14,15 +14,249 @@
 <body>
     <div class="main">
         <div class="youtube-nav">
-            navbar
+            <div class="left-nav-options">
+                <i class="fa-solid fa-bars" style="color: white;"></i>
+            </div>
+            <div class="searchbar-nav">
+                <input type="search" placeholder="Search" class="search-bar">
+                <i class="fa-solid fa-magnifying-glass"></i>
+                <i class="fa-solid fa-microphone-lines" style="background-color: white;"></i>
+            </div>
+            <div class="right-nav-options">
+                <i class="fa-solid fa-video"></i>
+                <i class="fa-regular fa-bell"></i>
+                <i class="fa-regular fa-user"></i>
+            </div>
         </div>
         <div class="right-content">
             <div class="youtube-slidebar">
-                slidebar
+               <div class="slidebar-content1">
+                <div class="nav-links">
+                    <i class="fa-solid fa-house" style="color: white;"></i>
+                    <a href="#">Home</a>
+                </div>
+                <div class="nav-links">
+                    <i class="fa-brands fa-medium"style="color: white;"></i>
+                    <a href="#">Shorts</a>
+                </div>
+                <div class="nav-links">
+                    <i class="fa-solid fa-expand" style="color: white;"></i>
+                    <a href="#">Subscription</a>
+                </div>
+                <hr class="line">
+                <div class="nav-links">
+                    <i class="fa-regular fa-bookmark" style="color: white;"></i>
+                    <a href="#">Library</a>
+                </div>
+                <div class="nav-links">
+                    <i class="fa-regular fa-circle-xmark" style="color: white;"></i>
+                    <a href="#">History</a>
+                </div>
+                <div class="nav-links">
+                    <i class="fa-solid fa-video" style="color: white;"></i>
+                    <a href="#">Your videos</a>
+                </div>
+                <div class="nav-links">
+                    <i class="fa-regular fa-clock" style="color: white;"></i>
+                    <a href="#">Watch later</a>
+                </div>
+                <div class="nav-links">
+                    <i class="fa-regular fa-thumbs-up" style="color: white;"></i>
+                    <a href="#">Liked videos</a>
+                </div>
+                <div class="nav-links">
+                    <i class="fa-solid fa-arrow-down" style="color: white;"></i>
+                    <a href="#">Show more</a>
+                </div>
+                <hr class="line">
+               </div>
+               <div class="sliderbar-content2">
+                    <div class="sub-link">
+                        <i class="fa-regular fa-circle" style="color: white;;"></i>
+                        <a href="#">ABC learning</a>
+                        <i class="fa-solid fa-podcast" style="color: white;;"></i>
+                    </div>
+                    <div class="sub-link">
+                        <i class="fa-regular fa-circle" style="color: white;"></i>
+                        <a href="#">Mortal</a>
+                        <i class="fa-solid fa-podcast" style="color: white;"></i>
+                    </div>
+                    <div class="sub-link">
+                        <i class="fa-regular fa-circle" style="color: white;"></i>
+                        <a href="#">Tech travel</a>
+                        <i class="fa-solid fa-podcast" style="color: white;"></i>
+                    </div>
+                    <div class="sub-link">
+                        <i class="fa-regular fa-circle" style="color: white;"></i>
+                        <a href="#">Dr bro</a>
+                        <i class="fa-solid fa-podcast" style="color: white;"></i>
+                    </div>
+                    <div class="sub-link">
+                        <i class="fa-regular fa-circle" style="color: white;"></i>
+                        <a href="#">Mrs beast</a>
+                        <i class="fa-solid fa-podcast" style="color: white;"></i>
+                    </div>
+                    <div class="sub-link">
+                        <i class="fa-regular fa-circle" style="color: white;"></i>
+                        <a href="#">pogo</a>
+                        <i class="fa-solid fa-podcast" style="color: white;"></i>
+                    </div>
+                    <hr class="line">
+               </div>
+               <div class="sliderbar-content3">
+                    <div class="sub-link">
+                        <i class="fa-solid fa-fire" style="color: #ffffff;"></i>
+                        <a href="#">Trending</a>
+                    </div>
+                    <div class="sub-link">
+                        <i class="fa-solid fa-fire" style="color: #ffffff;"></i>
+                        <a href="#">Trending</a>
+                    </div>
+                    <div class="sub-link">
+                        <i class="fa-solid fa-fire" style="color: #ffffff;"></i>
+                        <a href="#">Trending</a>
+                    </div>
+                    <div class="sub-link">
+                        <i class="fa-solid fa-fire" style="color: #ffffff;"></i>
+                        <a href="#">Trending</a>
+                    </div>
+                    <div class="sub-link">
+                        <i class="fa-solid fa-fire" style="color: #ffffff;"></i>
+                        <a href="#">Trending</a>
+                    </div>
+               </div>
             </div>
             <div class="youtube-main">
-                main
-            </div>
+                <div class="main-nav">
+                   <div class="main-nav-options">
+                    <a href="#">All</a>
+                   </div>
+                   <div class="main-nav-options">
+                    <a href="#">Mixes</a>
+                   </div>
+                   <div class="main-nav-options">
+                    <a href="#">Music</a>
+                   </div>
+                   <div class="main-nav-options">
+                    <a href="#">Live</a>
+                   </div>
+                   <div class="main-nav-options">
+                    <a href="#">Street food</a>
+                   </div>
+                   <div class="main-nav-options">
+                    <a href="#">Tour</a>
+                   </div>
+                   <div class="main-nav-options">
+                    <a href="#">Trending</a>
+                   </div>
+                   <div class="main-nav-options">
+                    <a href="#">Nature</a>
+                   </div>
+                   <div class="main-nav-options">
+                    <a href="#">programming</a>
+                   </div>
+                   <div class="main-nav-options">
+                    <a href="#">lighting</a>
+                   </div>
+                   <div class="main-nav-options">
+                    <a href="#">Indian Railways</a>
+                   </div>
+                   <i class="fa-solid fa-angle-right" style="color: #ffffff;"></i>
+                </div>
+                <div class="main-content">
+                    <div class="main-card">
+                        <img src="./Images/1.webp" alt="">
+                            <div class="card-details">
+                                <div class="card-logo">
+                                    <img src="images/2.webp" alt="">
+                                </div>
+                                <div class="card-titles">
+                                    <p class="card-title">Top Songs India Your Weekly mixtape of fresh music...</p>
+                                     <a href="#">Abhijith Bhakthan</a>
+                                     <a href="#">5.4k views 1hour ago</a>
+                                </div>
+                            </div>
+                    </div>
+                    <div class="main-card">
+                        <img src="./Images/2.webp" alt="">
+                            <div class="card-details">
+                                <div class="card-logo">
+                                    <i class="fa-regular fa-bell"></i>
+                                </div>
+                                <div class="card-titles">
+                                    <p class="card-title">Top Songs India Your Weekly mixtape of fresh music...</p>
+                                     <a href="#">Abhijith Bhakthan</a>
+                                     <a href="#">5.4k views 1hour ago</a>
+                                </div>
+                            </div>
+                    </div>
+                    <div class="main-card">
+                        <img src="./Images/3.webp" alt="">
+                            <div class="card-details">
+                                <div class="card-logo">
+                                    <i class="fa-regular fa-bell"></i>
+                                </div>
+                                <div class="card-titles">
+                                    <p class="card-title">Top Songs India Your Weekly mixtape of fresh music...</p>
+                                     <a href="#">Abhijith Bhakthan</a>
+                                     <a href="#">5.4k views 1hour ago</a>
+                                </div>
+                            </div>
+                    </div>
+                    <div class="main-card">
+                        <img src="./Images/4.webp" alt="">
+                            <div class="card-details">
+                                <div class="card-logo">
+                                    <i class="fa-regular fa-bell"></i>
+                                </div>
+                                <div class="card-titles">
+                                    <p class="card-title">Top Songs India Your Weekly mixtape of fresh music...</p>
+                                     <a href="#">Abhijith Bhakthan</a>
+                                     <a href="#">5.4k views 1hour ago</a>
+                                </div>
+                            </div>
+                    </div>
+                    <div class="main-card">
+                        <img src="./Images/5.webp" alt="">
+                            <div class="card-details">
+                                <div class="card-logo">
+                                    <i class="fa-regular fa-bell"></i>
+                                </div>
+                                <div class="card-titles">
+                                    <p class="card-title">Top Songs India Your Weekly mixtape of fresh music...</p>
+                                     <a href="#">Abhijith Bhakthan</a>
+                                     <a href="#">5.4k views 1hour ago</a>
+                                </div>
+                            </div>
+                    </div>
+                    <div class="main-card">
+                        <img src="./Images/6.webp" alt="">
+                            <div class="card-details">
+                                <div class="card-logo">
+                                    <i class="fa-regular fa-bell"></i>
+                                </div>
+                                <div class="card-titles">
+                                    <p class="card-title">Top Songs India Your Weekly mixtape of fresh music...</p>
+                                     <a href="#">Abhijith Bhakthan</a>
+                                     <a href="#">5.4k views 1hour ago</a>
+                                </div>
+                            </div>
+                    </div>
+                    <div class="main-card">
+                        <img src="./Images/1.webp" alt="">
+                            <div class="card-details">
+                                <div class="card-logo">
+                                    <i class="fa-regular fa-bell"></i>
+                                </div>
+                                <div class="card-titles">
+                                    <p class="card-title">Top Songs India Your Weekly mixtape of fresh music...</p>
+                                     <a href="#">Abhijith Bhakthan</a>
+                                     <a href="#">5.4k views 1hour ago</a>
+                                </div>
+                            </div>
+                    </div>
+
+
         </div>
     </div>
 </body>
